--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.1",
+    "http": "^0.0.1-security",
     "socket.io": "^4.5.1"
   }
 }
